Archive2/1c/aa9b09cf828c4e/output
main.cpp:12:17: error: invalid use of non-static data member 'x'
        cout << x << endl;
                ^
1 error generated.
